init function contacts

--- a/contacts.html
+++ b/contacts.html
@@ -21,7 +21,7 @@
 
 </head>
 
-<body onload="init(), render('contacts'), showContacts()" onresize="showContacts()" id="body">
+<body onload="initContacts()" onresize="showContacts()" id="body">
 
     <div w3-include-html="assets/templates/add_task_template.html" class="d-none" id="add-task-overlay-board"></div>
 
