login bug fixed

--- a/board.html
+++ b/board.html
@@ -18,7 +18,7 @@
     
 </head>
 
-<body id="body" onload="initBoard(), render('board')" id="body">
+<body id="body" onload="initBoard()" id="body">
     <div w3-include-html="assets/templates/add_task_template.html" class="d-none" id="add-task-overlay-board"></div>
     <div w3-include-html="assets/templates/help_template.html"></div>
 
