--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="headline-underline"></div>
-                <form class="form-style" onsubmit="login()">
+                <form class="form-style" onsubmit="login(); return false">
                     <div class="email-field">
                         <input id="email-login" required type="email" class="form-control" placeholder="Email"
                             aria-label="First name">
