--- a/contacts.html
+++ b/contacts.html
@@ -126,9 +126,9 @@
             <div id="overview" class="complete-page">
                 <div id="contact-list" class="all-contacts">
 
-                    <!--Nur zur demonstration  -->
+                    <!--Nur zur demonstration  
                     <button onclick="checkContacts()">Load</button>
-                   
+                   -->
                     <div class="button-new-contact"><button class="button-dark" onclick="openNewContact()">New
                             contact
                             <img src="assets/img/add_contact_icon.png"></button>
