first commit edit task

--- a/board.html
+++ b/board.html
@@ -15,6 +15,7 @@
     <script src="script.js"></script>
     <script src="board.js"></script>
     <script src="add_task.js"></script>
+    <script src="add_task_template.js"></script>
     
 </head>
 
