legal notice bug fix

--- a/legal_notice.html
+++ b/legal_notice.html
@@ -13,7 +13,7 @@
     <script src="script.js"></script>
 </head>
 
-<body onload="init(), render('legalnotice')" id="body">
+<body onload="render('legalnotice')" id="body">
     <div w3-include-html="assets/templates/mobile_template.html"></div>
     <div w3-include-html="assets/templates/help_template.html"></div>
 
