--- a/success_forget_pw.html
+++ b/success_forget_pw.html
@@ -34,13 +34,14 @@
 
 
                 <div class="headline">
-                    <h1>Success</h1>
+                    <h1>E-Mail sent</h1>
                 </div>
 
                 <div class="headline-underline"></div>
 
                 <div class="info-div">
                     <span style="font-size: 18px ;">Please check your inbox. An E-Mail with a link to reset your password was sent to you.</span>
+
                 </div>
                 
 
