--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="login.js"></script>
     <script src="index.js"></script>
     <script src="script.js"></script>
+    <script src="success.js"></script>
 
 </head>
 
@@ -125,14 +126,16 @@
                 </div>
 
                 <div class="forgot-password-email-field">
-                    <form onsubmit="">
+                    <form onsubmit="" class="forgot-pw-form">
                         <input required type="email" class="form-control" placeholder="Email" aria-label="First name">
                         <img class="forgot-password-icon" src="assets/img/mail-icon.svg" alt="">
+
+                        <button class="button" style="margin-top: 22px ;">Send mail</button>
 
                     </form>
                 </div>
 
-                <div class="button">Send me the email</div>
+                
 
             </div>
 
