--- a/success_reset_pw.html
+++ b/success_reset_pw.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reset Password</title>
+    <title>Password changed</title>
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,48 +17,40 @@
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="reset_forget_success.css">
 
-    <script src="mini_backend.js"></script>
     <script src="script.js"></script>
     <script src="success.js"></script>
 
+
 </head>
 
-<body onload="init()">
+<body>
     <div class="complete-page">
         <div class="join-logo"><img src="assets/img/Capa 2join-logo.png" alt=""></div>
 
         <div class="reset-password-display">
-            <div class="reset-password-area">
+            <div class="reset-password-area" style="height: 250px ;">
+
+
 
                 <div class="headline">
-                    <h1>Reset your password</h1>
+                    <h1>Password changed</h1>
                 </div>
 
                 <div class="headline-underline"></div>
 
                 <div class="info-div">
-                    <span>Change your account password</span>
+                    <span style="font-size: 18px ;">You can log in now with your new password.</span>
+                    
                 </div>
-                <form class="form-style" onsubmit="test(); return false">
-                    <div class="reset-password-field">
-                        <input required type="text" class="form-control" placeholder="New password"
-                            aria-label="First name">
-                    </div>
 
-                    <div class="reset-password-field">
-                        <input required type="text" class="form-control" placeholder="Confirm password"
-                            aria-label="First name">
-                    </div>
-                    <button class="continue-button">Continue</button>
-                </form>
+                <button onclick="goToLogin()" class="button hover-dark">Go to Login</button>
+
                 
 
             </div>
 
         </div>
     </div>
-
-
 
 </body>
 
