--- a/contacts.html
+++ b/contacts.html
@@ -18,6 +18,7 @@
     <script src="script.js"></script>
     <script src="add_task.js"></script>
     <script src="new_contact.js"></script>
+    <script src="add_task_template.js"></script>
 
 </head>
 
@@ -170,7 +171,7 @@
                                         <div id="bigContactName"></div>
                                     </h2>
                                 </div>
-                                <div class="addTask-button" onclick="showAddTask()">+ Add Task</div>
+                                <div class="addTask-button" id="addTask-button-contacts">+ Add Task</div>
                             </div>
                         </div>
 
