added delete Button Tasks

--- a/board.html
+++ b/board.html
@@ -31,7 +31,7 @@
             <img class="close-overlay-btn" src="assets/img/close.svg" onclick="closeCard()">
             <img class="back-overlay-btn" src="assets/img/backButton.svg" onclick="closeCard()">
 
-            <div id="task-overly-details"></div>
+            <div id="task-overly-details" class="task-overly-details"></div>
         </div>
 
     </div>
