--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 <body onload="init()">
     <div class="complete-page">
+        <!-- <div class="start-join-logo"><img src="assets/img/Capa 2join-logo.png" alt=""></div>-->
         <div class="join-logo"><img src="assets/img/Capa 2join-logo.png" alt=""></div>
         <div id="signUp-button" class="login-head">
             <span class="hover-bright" style="border: none;">Not a Join user?</span>
