--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
     <script src="script.js"></script>
     <script src="success.js"></script>
 
+    <!--JQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
 </head>
 
-<body onload="init()">
+<body onload="init(), startLogo()">
     <div class="complete-page">
-        <!-- <div class="start-join-logo"><img src="assets/img/Capa 2join-logo.png" alt=""></div>-->
-        <div class="join-logo"><img src="assets/img/Capa 2join-logo.png" alt=""></div>
+        <div id="start-join-logo" class="start-join-logo"><img src="assets/img/Capa 2join-logo.png" alt=""></div>
+        <!-- <div class="join-logo"><img src="assets/img/Capa 2join-logo.png" alt=""></div>-->
         <div id="signUp-button" class="login-head">
             <span class="hover-bright" style="border: none;">Not a Join user?</span>
             <Button class="hover-dark" onclick="openSignUp()">Sign up</Button>
