--- a/board.html
+++ b/board.html
@@ -48,7 +48,7 @@
                 <h1 class="main-heading">Board</h1>
                 <div class="input-and-button-container">
                     <div class="board-input-container">
-                        <input class="board-inputfield" type="text" placeholder="Find Task">
+                        <input class="board-inputfield" type="text" placeholder="Find Task" id="searchTaskDestop" onkeyup="searchTask()">
                         <div style="display: flex ;">
                             <span class="vertical-line">|</span>
                             <img class="search-icon" src="assets/img/search-icon.svg" alt="">
