added send mail php

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
                 <div class="forgot-password-email-field">
                     <form onsubmit="" class="forgot-pw-form">
-                        <input required type="email" class="form-control" placeholder="Email" aria-label="First name">
+                        <input required type="email" class="form-control" placeholder="E-Mail" aria-label="First name">
                         <img class="forgot-password-icon" src="assets/img/mail-icon.svg" alt="">
 
                         <button class="button" style="margin-top: 22px ;">Send mail</button>
