contactsbackground update when onclick also in tasks

--- a/board.html
+++ b/board.html
@@ -123,7 +123,7 @@
             <h1 class="main-heading">Board</h1>
             <div class="input-and-button-container">
                 <div class="board-input-container">
-                    <input class="board-inputfield" type="text" placeholder="Find Task">
+                    <input class="board-inputfield" type="text" placeholder="Find Task" id="searchTaskMobile" onkeyup="searchTask()">
                     <div style="display: flex ;">
                         <span class="vertical-line">|</span>
                         <img class="search-icon" src="assets/img/search-icon.svg" alt="">
