--- a/success_forget_pw.html
+++ b/success_forget_pw.html
@@ -40,7 +40,7 @@
                 <div class="headline-underline"></div>
 
                 <div class="info-div">
-                    <span style="font-size: 18px ;">Please check your inbox. An E-Mail with a link to reset your password was sent to you.</span>
+                    <span style="font-size: 18px ;">Please check your inbox. An E-Mail with a link to reset your password was sent to you. Make sure to check your <i><u>spam</u></i> also.</span>
 
                 </div>
                 
