login design updates

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
                     </div>
 
+                    <span id="user-not-found" class="user-not-found d-none">User not found. Try again</span>
+
                     <div class="rememberMe-forgotPassword">
                         <div class="remember-me"> <input type="checkbox">Remember me</div>
                         <div class="forgot-password" onclick="openForgotPassword()"><a href="#">Forgot my password</a>
