--- a/summary.html
+++ b/summary.html
@@ -13,10 +13,11 @@
 
     <script src="mini_backend.js"></script>
     <script src="script.js"></script>
+    <script src="summary.js"></script>
     
 </head>
 
-<body onload="init(), render('summary')" id="body">
+<body onload="renderSummary(); render('summary')" id="body">
 
     <div w3-include-html="assets/templates/mobile_template.html"></div>
     <div w3-include-html="assets/templates/help_template.html"></div>
@@ -34,15 +35,15 @@
                 <div class="summary-information">
                     <div class="first-row">
                         <a href="board.html">
-                            <h2>2</h2>
+                            <h2 id="summaryTasksBoard"></h2>
                             <span>Tasks in Board</span>
                         </a>
                         <a href="board.html">
-                            <h2>2</h2>
+                            <h2 id="summaryTasksProgress"></h2>
                             <span>Tasks in Progress</span>
                         </a>
                         <a href="board.html">
-                            <h2>2</h2>
+                            <h2 id="summaryTasksFeedback"></h2>
                             <span>Awaiting Feedback</span>
                         </a>
                     </div>
@@ -50,12 +51,12 @@
                         <div class="urgent-tasks">
                             <img src="assets/img/urgentSymbol.svg">
                             <div>
-                                <h2>1</h2>
+                                <h2 id="summaryTasksUrgent"></h2>
                                 <span>Urgent</span>
                             </div>
                         </div>
                         <div class="upcoming-deadline">
-                            <span style="font-size: 18px;"><strong>October 16, 2022</strong></span>
+                            <span style="font-size: 18px;" id="currentDate"></span>
                             <span style="font-size: 14px; margin-top: 6px;">Upcoming Deadline</span>
                         </div>
                     </a>
@@ -65,7 +66,7 @@
                                 <img src="assets/img/pencilToDo.svg">
                             </div>
                             <div class="content-div-row-3">
-                                <h2>1</h2>
+                                <h2 id="summaryTasksTodo"></h2>
                                 <span>To-do</span>
                             </div>
                         </a>
@@ -74,15 +75,15 @@
                                 <img src="assets/img/doneSymbol.svg" class="done-symbol">
                             </div>
                             <div class="content-div-row-3">
-                                <h2>1</h2>
+                                <h2 id="summaryTasksDone"></h2>
                                 <span>Done</span>
                             </div>
                         </a>
                     </div>
                 </div>
                 <div class="greeting">
-                    <span style="margin: 0;">Good morning,</span>
-                    <span class="greeting_name">Sofia Müller</span>
+                    <span style="margin: 0;">Good morning</span>
+                    <span class="greeting_name" id="greeting-name"></span>
                 </div>
             </div>
         </div>
@@ -98,15 +99,15 @@
         <div class="summary-information-mobile">
             <div class="first-row">
                 <a href="board.html">
-                    <h2>2</h2>
+                    <h2 id="summaryTasksBoard-mobile"></h2>
                     <span>Tasks in Board</span>
                 </a>
                 <a href="board.html">
-                    <h2>2</h2>
+                    <h2 id="summaryTasksProgress-mobile"></h2>
                     <span>Tasks in Progress</span>
                 </a>
                 <a href="board.html">
-                    <h2>2</h2>
+                    <h2 id="summaryTasksFeedback-mobile"></h2>
                     <span>Awaiting Feedback</span>
                 </a>
             </div>
@@ -114,12 +115,12 @@
                 <div class="urgent-tasks">
                     <img src="assets/img/urgentSymbol.svg">
                     <div>
-                        <h2>1</h2>
+                        <h2 id="summaryTasksUrgent-mobile"></h2>
                         <span>Urgent</span>
                     </div>
                 </div>
                 <div class="upcoming-deadline">
-                    <span style="font-size: 16px;"><strong>October 16, 2022</strong></span>
+                    <span style="font-size: 16px;" id="currentDate-mobile"></span>
                     <span style="font-size: 13px; margin-top: 6px;">Upcoming Deadline</span>
                 </div>
             </a>
@@ -129,7 +130,7 @@
                         <img src="assets/img/pencilToDo.svg">
                     </div>
                     <div class="content-div-row-3-mobile">
-                        <h2>1</h2>
+                        <h2 id="summaryTasksTodo-mobile"></h2>
                         <span>To-do</span>
                     </div>
                 </a>
@@ -138,7 +139,7 @@
                         <img src="assets/img/doneSymbol.svg" class="done-symbol">
                     </div>
                     <div class="content-div-row-3-mobile">
-                        <h2>1</h2>
+                        <h2 id="summaryTasksDone-mobile"></h2>
                         <span>Done</span>
                     </div>
                 </a>
