--- a/hello_mobile.html
+++ b/hello_mobile.html
@@ -9,15 +9,17 @@
     
     <script src="mini_backend.js"></script>
     <script src="script.js"></script>
+    <script src="hello_mobile.js"></script>
     <link rel="stylesheet" href="hello_mobile_style.css">
     <link rel="stylesheet" href="fonts.css">
     
 </head>
-<body onload="init(), render('hello')">
+<body onload="renderGreetingHello(); render('hello')">
     <div w3-include-html="assets/templates/mobile_template.html"></div>
+    <div w3-include-html="assets/templates/destop_template.html"></div>
     <div class="content-mobile">
-        <div><span>Good morning</span><span>,</span></div>
-        <h1 class="greeting-name">Sofia Müller</h1>
+        <div><span>Good morning</span></div>
+        <h1 class="greeting-name" id="greeting-name-mobile"></h1>
     </div>
 </body>
 </html>
