small disgn stuff

--- a/board.html
+++ b/board.html
@@ -29,7 +29,7 @@
             <h2>Are you sure to delete this task?</h2>
             <div class="alert-delete-task-btn">
                 <button onclick="closeAlertDelete()">Dismiss</button>
-                <button id="alert-delete-delete-btn">Delete</button>
+                <button id="alert-delete-delete-btn" class="alert-delete-delete-btn">Delete</button>
             </div>
         </div>
     </div>
