--- a/add_task.html
+++ b/add_task.html
@@ -39,7 +39,7 @@
                         </select>
                         <div class="new-category d-none" id="create-category">
                             <div class="new-category-name">
-                                <input id="new-category" placeholder="Name"></input>
+                                <input id="new-category" maxlength="10" placeholder="Name"></input>
                                 <button onclick="dismissCategory()" type="button"><img style="height: 18px;"
                                         src="assets/img/close-button-addtask.svg"></button>
                                 <button onclick="createNewCategory()" type="button"><img
@@ -107,7 +107,7 @@
             </select>
             <div class="new-category d-none" id="create-category-mobile">
                 <div class="new-category-name">
-                    <input id="new-category-mobile" placeholder="Name"></input>
+                    <input id="new-category-mobile" maxlength="10" placeholder="Name"></input>
                     <button onclick="dismissCategoryMobile()" type="button"><img style="height: 18px;"
                             src="assets/img/close-button-addtask.svg"></button>
                     <button onclick="createNewCategoryMobile()" type="button"><img
