changed all favicons to the same one

--- a/add_task.html
+++ b/add_task.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join - Add task</title>
-    <link rel="shortcut icon" href="assets/img/logo_lefter.png" type="image/x-icon">
     <link rel="stylesheet" href="add_task.css">
     <link rel="stylesheet" href="fonts.css">
+    <link rel="shortcut icon" href="assets/img/Join_background.png" type="image/x-icon">
+
 
     <script src="mini_backend.js"></script>
     <script src="script.js"></script>
