--- a/contacts.html
+++ b/contacts.html
@@ -13,6 +13,8 @@
 
     <link rel="stylesheet" href="contacts_style.css">
     <link rel="stylesheet" href="fonts.css">
+    <link rel="shortcut icon" href="assets/img/Join_background.png" type="image/x-icon">
+
     <script src="mini_backend.js"></script>
     <script src="contacts.js"></script>
     <script src="script.js"></script>
