--- a/board.html
+++ b/board.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets/img/logo_lefter.png" type="image/x-icon">
     <link rel="stylesheet" href="board.css">
     <link rel="stylesheet" href="board-mobile.css">
     <link rel="stylesheet" href="fonts.css">
+    <link rel="shortcut icon" href="assets/img/Join_background.png" type="image/x-icon">
+
     <title>Join - Board</title>
 
     <script src="mini_backend.js"></script>
