--- a/hello_mobile.html
+++ b/hello_mobile.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join - Hello</title>
-    <link rel="icon" type="image" href="assets/img/joinlogoBlack.svg">
+
+    <link rel="shortcut icon" href="assets/img/Join_background.png" type="image/x-icon">
+
     
     <script src="mini_backend.js"></script>
     <script src="script.js"></script>
