--- a/legal_notice.html
+++ b/legal_notice.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join - Legal Notice</title>
-    <link rel="icon" type="image" href="assets/img/joinlogoBlack.svg">
 
     <link rel="stylesheet" href="legal_notice_style.css">
     <link rel="stylesheet" href="fonts.css">
+    <link rel="shortcut icon" href="assets/img/Join_background.png" type="image/x-icon">
+
     <script src="script.js"></script>
 </head>
 
