--- a/reset_password.html
+++ b/reset_password.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-    <link rel="shortcut icon" href="assets/img/logo_lefter.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/Join_background.png" type="image/x-icon">
 
     <link rel="stylesheet" href="login_style.css">
     <link rel="stylesheet" href="fonts.css">
@@ -51,7 +51,7 @@
                     </div>
                     <button class="continue-button">Continue</button>
                 </form>
-                
+
 
             </div>
 
