--- a/success_forget_pw.html
+++ b/success_forget_pw.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-    <link rel="shortcut icon" href="assets/img/logo_lefter.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/Join_background.png" type="image/x-icon">
 
     <link rel="stylesheet" href="login_style.css">
     <link rel="stylesheet" href="fonts.css">
@@ -40,10 +40,11 @@
                 <div class="headline-underline"></div>
 
                 <div class="info-div">
-                    <span style="font-size: 18px ;">Please check your inbox. An E-Mail with a link to reset your password was sent to you. Make sure to check your <i><u>spam</u></i> also.</span>
+                    <span style="font-size: 18px ;">Please check your inbox. An E-Mail with a link to reset your
+                        password was sent to you. Make sure to check your <i><u>spam</u></i> also.</span>
 
                 </div>
-                
+
 
             </div>
 
