--- a/success_signup.html
+++ b/success_signup.html
@@ -11,11 +11,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-    <link rel="shortcut icon" href="assets/img/logo_lefter.png" type="image/x-icon">
 
     <link rel="stylesheet" href="login_style.css">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="reset_forget_success.css">
+    <link rel="shortcut icon" href="assets/img/Join_background.png" type="image/x-icon">
+
 
     <script src="script.js"></script>
     <script src="success.js"></script>
