--- a/reset_password.html
+++ b/reset_password.html
@@ -20,6 +20,7 @@
     <script src="mini_backend.js"></script>
     <script src="script.js"></script>
     <script src="success.js"></script>
+    <script src="login.js"></script>
 
 </head>
 
@@ -39,16 +40,21 @@
                 <div class="info-div">
                     <span>Change your account password</span>
                 </div>
-                <form class="form-style" onsubmit="test(); return false">
+                <form class="form-style" onsubmit="changePassword(); return false">
                     <div class="reset-password-field">
-                        <input required type="text" class="form-control" placeholder="New password"
+                        <input id="new-password" required type="text" class="form-control" placeholder="New password"
                             aria-label="First name">
                     </div>
 
                     <div class="reset-password-field">
-                        <input required type="text" class="form-control" placeholder="Confirm password"
+                        <input id="new-password-confirm" required type="text" class="form-control" placeholder="Confirm password"
                             aria-label="First name">
                     </div>
+
+                    <span id="user-not-found" class="user-not-found d-none" style="margin-top: -10px; margin-bottom: 16px;">Passwords are not identical. Try again.</span>
+
+
+
                     <button class="continue-button">Continue</button>
                 </form>
 
