--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="headline-underline"></div>
-                <form onsubmit="addUser(); return false" class="form-style">
+                <form onsubmit="checkSignUp(); return false" class="form-style">
                     <div class="signup-name-field">
                         <input id="name-signup" required type="text" class="form-control" placeholder="Name"
                             aria-label="First name">
@@ -107,12 +107,12 @@
 
                     </div>
 
-                    <span id="user-not-found" class="user-not-found" style="margin-bottom: -10px ; margin-top: 17px;">User already exists. Please <b style="color: #28ABE2 ;">log in</b> or <b style="text-decoration: underline;">change E-Mail</b>.</span>
+                    <span id="userExists" class="user-not-found d-none" style="margin-bottom: -10px ; margin-top: 17px;">User already exists. Please <b style="color: #28ABE2 ;">log in</b> or <b style="text-decoration: underline;">change Email</b>.</span>
 
 
                     <div style="display: flex ;">
                         <button class="button mt-4" type="submit">Sign up</button>
-                        <button class="button mt-4" onclick="openIndex()" style="margin-left: 12px ; background-color: #28ABE2 ">Go to Login</button>
+                        <button id="goToLoginBtn" class="button mt-4 d-none" onclick="openIndex()" style="margin-left: 12px ; background-color: #28ABE2 ">Go to Login</button>
                         
                     </div>
                 </form>
