activeUser saved in local storage now

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 </head>
 
-<body onload="init(), startLogo()">
+<body onload="init()">
     <div class="complete-page">
         <div id="start-join-logo" class="start-join-logo"><img src="assets/img/Capa 2join-logo.png" alt=""></div>
         <!-- <div class="join-logo"><img src="assets/img/Capa 2join-logo.png" alt=""></div>-->
