--- a/contacts.html
+++ b/contacts.html
@@ -65,7 +65,7 @@
 
                             <div class="add-contact-buttons">
                                 <div class="button-cancel"><button type="button"
-                                        onclick="flyOutContact()">Cancel<img src="assets/img/X.png"></button>
+                                        onclick="flyOutContact()">Cancel X</button>
                                 </div>
                                 <div class="button-create"><button type="submit" onclick="addNewContact()">Create
                                         contact <img src="assets/img/hook.png"></button>
