--- a/reset_password.html
+++ b/reset_password.html
@@ -19,7 +19,6 @@
 
     <script src="mini_backend.js"></script>
     <script src="script.js"></script>
-    <script src="success.js"></script>
     <script src="login.js"></script>
 
 </head>
@@ -44,14 +43,21 @@
                     <div class="reset-password-field">
                         <input id="new-password" required type="text" class="form-control" placeholder="New password"
                             aria-label="First name">
+                        <img id="pw-icon-signup" class="password-signup-icon" src="assets/img/password-icon.svg" alt="">
+                        <img onclick="changePwToText('password-signup', 'signup')" id="pw-no-show-signup"
+                            class="password-icon d-none" src="assets/img/pw-no-show-icon.svg" style="cursor: pointer ;">
+                        <img onclick="changeTextToPw('password-signup', 'signup')" id="pw-show-signup"
+                            class="password-icon d-none" src="assets/img/pw-show-icon.svg" style="cursor: pointer ;">
+
                     </div>
 
                     <div class="reset-password-field">
-                        <input id="new-password-confirm" required type="text" class="form-control" placeholder="Confirm password"
-                            aria-label="First name">
+                        <input id="new-password-confirm" required type="text" class="form-control"
+                            placeholder="Confirm password" aria-label="First name">
                     </div>
 
-                    <span id="user-not-found" class="user-not-found d-none" style="margin-top: -10px; margin-bottom: 16px;">Passwords are not identical. Try again.</span>
+                    <span id="user-not-found" class="user-not-found d-none"
+                        style="margin-top: -10px; margin-bottom: 16px;">Passwords are not identical. Try again.</span>
 
 
 
