small design fixes

--- a/add_task.html
+++ b/add_task.html
@@ -76,7 +76,7 @@
                             </div>
                         </div>
                         <span>Assigned to</span>
-                        <div id="assign-to-list" class="dropdown-check-list-contacts" tabindex="100">
+                        <div id="assign-to-list" class="dropdown-check-list-contacts">
                             <span class="anchor">Select Contacts</span>
                             <ul class="items" id="contacts-to-assign">
                             </ul>
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <span>Assigned to</span>
-            <div id="assign-to-list-mobile" class="dropdown-check-list-contacts" tabindex="100">
+            <div id="assign-to-list-mobile" class="dropdown-check-list-contacts">
                 <span class="anchor">Select Contacts</span>
                 <ul class="items" id="contacts-to-assign-mobile">
                 </ul>
