--- a/legal_notice.html
+++ b/legal_notice.html
@@ -11,10 +11,11 @@
     <link rel="stylesheet" href="fonts.css">
     <link rel="shortcut icon" href="assets/img/Join_background.png" type="image/x-icon">
 
+    <script src="mini_backend.js"></script>
     <script src="script.js"></script>
 </head>
 
-<body onload="render('legalnotice')" id="body">
+<body onload="init(); render('legalnotice')" id="body">
     <div w3-include-html="assets/templates/mobile_template.html"></div>
     <div w3-include-html="assets/templates/help_template.html"></div>
 
