--- a/reset_password.html
+++ b/reset_password.html
@@ -21,6 +21,8 @@
     <script src="script.js"></script>
     <script src="login.js"></script>
 
+    
+
 </head>
 
 <body onload="init()">
@@ -41,19 +43,33 @@
                 </div>
                 <form class="form-style" onsubmit="changePassword(); return false">
                     <div class="reset-password-field">
-                        <input id="new-password" required type="text" class="form-control" placeholder="New password"
-                            aria-label="First name">
-                        <img id="pw-icon-signup" class="password-signup-icon" src="assets/img/password-icon.svg" alt="">
-                        <img onclick="changePwToText('password-signup', 'signup')" id="pw-no-show-signup"
-                            class="password-icon d-none" src="assets/img/pw-no-show-icon.svg" style="cursor: pointer ;">
-                        <img onclick="changeTextToPw('password-signup', 'signup')" id="pw-show-signup"
-                            class="password-icon d-none" src="assets/img/pw-show-icon.svg" style="cursor: pointer ;">
+                        <input onfocus="checkInputType('new-password','reset')" id="new-password" required type="password"
+                            class="form-control" placeholder="New password" aria-label="First name">
+
+                        <img id="pw-icon-reset" class="password-signup-icon" src="assets/img/password-icon.svg" alt="">
+
+                        <img onclick="changePwToText('new-password', 'reset')" id="pw-no-show-reset"
+                            class="password-icon d-none t-9" src="assets/img/pw-no-show-icon.svg" style="cursor: pointer ;">
+
+                        <img onclick="changeTextToPw('new-password', 'reset')" id="pw-show-reset"
+                            class="password-icon d-none t-9" src="assets/img/pw-show-icon.svg" style="cursor: pointer ;">
 
                     </div>
 
                     <div class="reset-password-field">
-                        <input id="new-password-confirm" required type="text" class="form-control"
+                        <input onfocus="checkInputType('new-password-confirm', 'confirm')" id="new-password-confirm" required type="password" class="form-control"
                             placeholder="Confirm password" aria-label="First name">
+
+                        <img id="pw-icon-confirm" class="password-signup-icon" src="assets/img/password-icon.svg" alt="">
+
+                        <img onclick="changePwToText('new-password-confirm', 'confirm')" id="pw-no-show-confirm"
+                            class="password-icon d-none t-9" src="assets/img/pw-no-show-icon.svg" style="cursor: pointer ;">
+
+                        <img onclick="changeTextToPw('new-password-confirm', 'confirm')" id="pw-show-confirm"
+                            class="password-icon d-none t-9" src="assets/img/pw-show-icon.svg" style="cursor: pointer ;">
+
+
+
                     </div>
 
                     <span id="user-not-found" class="user-not-found d-none"
