render Functions bug fix

--- a/add_task.html
+++ b/add_task.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body onload="initAddTask(), render('addtask'); " id="body">
+<body onload="initAddTask() " id="body">
 
     <div w3-include-html="assets/templates/mobile_template.html"></div>
     <div w3-include-html="assets/templates/help_template.html"></div>
