--- a/legal_notice.html
+++ b/legal_notice.html
@@ -13,9 +13,10 @@
 
     <script src="mini_backend.js"></script>
     <script src="script.js"></script>
+    <script src="legal_notice.js"></script>
 </head>
 
-<body onload="init(); render('legalnotice')" id="body">
+<body onload="initLegalNotice()" id="body">
     <div w3-include-html="assets/templates/mobile_template.html"></div>
     <div w3-include-html="assets/templates/help_template.html"></div>
 
