--- a/summary.html
+++ b/summary.html
@@ -18,7 +18,7 @@
     
 </head>
 
-<body onload="renderSummary(); render('summary')" id="body">
+<body onload="renderSummary()" id="body">
 
     <div w3-include-html="assets/templates/mobile_template.html"></div>
     <div w3-include-html="assets/templates/help_template.html"></div>
