--- a/contacts.html
+++ b/contacts.html
@@ -69,7 +69,7 @@
                                 <div class="button-cancel"><button type="button"
                                         onclick="flyOutContact()">Cancel X</button>
                                 </div>
-                                <div class="button-create"><button type="submit" onclick="addNewContact()">Create
+                                <div class="button-create"><button type="submit">Create
                                         contact <img src="assets/img/hook.png"></button>
                                 </div>
                             </div>
